@@ -1,6 +1,5 @@
 {
 	"features": [],
-	"hacks": {},
 	"actions": {},
 	"ammo": [],
 	"ammoNames": [],
