@@ -31,10 +31,6 @@
 
 	"dataSegment": 561684,
 
-	"hacks": {
-		"plasmaFlashStateJitter": true
-	},
-
 	"miscData": {
 		"startHealth": {
 			"offsets": [404440],
@@ -771,7 +767,8 @@
 		},
 		"186528": {
 			"description": "Player Plasma Rifle attack.",
-			"name": "FirePlasma"
+			"name": "FirePlasma",
+      "usesExtraFlashState": true
 		},
 		"186832": {
 			"description": "Player Pistol shot.",
@@ -787,7 +784,8 @@
 		},
 		"187312": {
 			"description": "Player Chaingun shot.\n\nAlso checks ammo, does not go to -1 ammo, but changes the weapon instead.",
-			"name": "FireCGun"
+			"name": "FireCGun",
+      "usesExtraFlashState": true
 		},
 		"187520": {
 			"description": "Restore the lighting level after a gun flash.",
