@@ -5,9 +5,6 @@
 	"features": [
 		"nosupport.pars"
 	],
-	"hacks": {
-		"plasmaFlashStateJitter": true
-	},
 
 	"weaponNames": [
 		"Fist",
@@ -410,7 +407,8 @@
 		"186208": {
 			"description": "Player Plasma Rifle attack.",
 			"name": "FirePlasma",
-			"type": "weapon"
+			"type": "weapon",
+      "usesExtraFlashState": true
 		},
 		"186512": {
 			"description": "Player Pistol shot.",
@@ -434,7 +432,8 @@
 			"description": "Player Chaingun shot.\n\nAlso checks ammo, does not go to -1 ammo, but changes the weapon instead.",
 			"name": "FireCGun",
 			"type": "weapon",
-			"sound": "sound:1"
+			"sound": "sound:1",
+      "usesExtraFlashState": true
 		},
 		"187200": {
 			"description": "Restore the lighting level after a gun flash.",
