@@ -17,7 +17,6 @@
 		"gibHealth": 0
 	},
 
-	"hacks": {},
 	"actions": {},
 	"ammo": [],
 	"ammoNames": [],
