@@ -10,7 +10,6 @@
 	],
 
 	"features": [],
-	"hacks": {},
 	"actions": {},
 	"ammo": [],
 	"ammoNames": [],
